# plate-RESORT

./: README.md
.github/: copilot-instructions.md
.github/workflows/: copilot-setup-steps.yml
plate carousel/: README.md
plate hotel/: README.md
plate hotel/3D printed parts/: 4xB1 well_plate_trays.3mf  B1 well_plate_tray RevA.step  B1 well_plate_tray RevA.stl  B2 plate_hotel_base RevA.stl
plate-hotel-single/: README.md  plate hotel BOM RevA 2025-02-20.xlsx
plate-hotel-single/3D printed parts/: B2 plate_hotel_base RevA.step
plate-hotel-single/3D printed parts/assembly reference/: assembly_plate_hotel RevA.f3z  assembly_plate_hotel RevA.step
plate-resort-multiple/: .gitignore  CHANGELOG.md  Dockerfile  PI_DEPLOYMENT.md  PREFECT_README.md  QUICK_SETUP.md  README.md  adc_manager.py  app.py  bonnet_test.py  bootstrap_pi.sh  button_manager.py  client-requirements.txt  demo_client.py  demo_client.sh  device.py  display_manager.py  docker-compose.yml  docker-launch.sh  dxl_check_error.py  dxl_keyboard_test.py  dxl_ping.py  example_usage.py  gui.py  install-pip.sh  install.sh  interactive_client.py  launch.sh  orchestrator.py  pin_test.py  plate-resort-BOM-RevA.xlsx  plate-resort-pi.desktop  plate-resort.desktop  plate_resort.py  pyproject.toml  requirements.txt  resort-controller.py  resort-firmware.py  resort_config.yaml  secrets.ini.template  (+17 more)
plate-resort-multiple/.github/: copilot-instructions.md  copilot-instructions.nd
plate-resort-multiple/archived/: README_fastapi.md  example_usage.py  generate_api_key.py  install.sh
plate-resort-multiple/archived/client_old/: README.md
plate-resort-multiple/archived/server_fastapi/: __init__.py  main.py
plate-resort-multiple/archived_gui/: plate-resort.desktop  start-web-gui.sh  web_gui.py
plate-resort-multiple/archived_gui/templates/: index.html  web_gui.html
plate-resort-multiple/client/: client.py
plate-resort-multiple/deployment/: README.md  plate-resort.service
plate-resort-multiple/docs/: pi-venv-prefect-setup.md
plate-resort-multiple/plate_resort/: __init__.py  core.py  resort_config.yaml  secrets.ini.template  setup.py  update.py
plate-resort-multiple/plate_resort/client/: __init__.py  cli.py  demo.py  env.sh  example_prefect_client.py  interactive.py
plate-resort-multiple/plate_resort/config/: defaults.yaml  secrets.ini.template
plate-resort-multiple/plate_resort/server/: main.py  wrapper.py
plate-resort-multiple/plate_resort/utils/: __init__.py  keygen.py  update.py
plate-resort-multiple/plate_resort/workflows/: __init__.py  deploy.py  flows.py  orchestrator.py  worker_service.py
plate-resort-multiple/prefect_flows/: README.md  TEST_REPORT.md  __init__.py  deploy_flows.py  device.py  orchestrator.py  test_e2e_integration.py  test_instance_persistence.py  test_integration_simple.py  worker_service.py
plate-resort-multiple/server/: main.py  run_server.sh  wrapper.py
plate-resort-multiple/templates/: web_gui.html
plate-resort-multiple/test_scripts/: README.md  test_gui_local.py  test_motor_health.py  test_pi_gui.py  test_plate_resort.py  test_pwm_calibration.py
plate-resort-multiple/tests/: README.md  check_workspace.py  test_dxl_ping.py
